# dalikam

./: .gitignore  .gitmodules  LICENSE.md  README.md  main.py  pyproject.toml
src/dalikam/: __init__.py  main.py  style.qss
src/dalikam/backend/: segmentation.py  state.py
src/dalikam/backend/models/: dataset.json  plans.json
src/dalikam/presentation/view/: landingView.py  main_window.py
src/dalikam/presentation/viewmodel/: landingViewModel.py
src/dalikam/rendering/: visualizer.py
src/dalikam/router/: router.py
src/dalikam/tools/: micromamba.py  setup_backend.py  utils.py
src/dalikam/ui/filePage/: fileModel.py  fileVM.py  fileView.py
src/dalikam/ui/landingPage/: __init__.py  landingModel.py  landingVM.py  landingView.py  landingViewModel.py  main_window.py
src/dalikam/ui/settingsPage/: check_devices.py  settingsModel.py  settingsVM.py  settingsView.py
src/dalikam/ui/viewerPage/: viewerModel.py  viewerVM.py  viewerView.py
