[project]
name = "dalikam"
version = "0.1.0"
description = "GUI for retinal OCT image segmentation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nibabel>=5.4.0",
    "pyqt6>=6.10.2",
    "vtk>=9.6.1",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
# uv run start-app
start-app = "dalikam.main:main"
setup = "dalikam.tools.setup_backend:main"
